@@ -1,3 +1,4 @@
+ * added vars require configuration tests
  * added ssl renegotiation tests
 
 v1.11.0
